--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homepublicidade",
+  "name": "template-base-vanila-tailwindcss",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
